# mergechannels

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml  ruff.toml  test.ipynb  tox.ini
.github/workflows/: CI.yml
assets/builtin_luts/: phase.lut
assets/christ_luts/: LICENSE  Turbo.lut
assets/converted/: 16_colors.txt  3-3-2 RGB.txt  3color-BMR.txt  3color-CGY.txt  3color-RMB.txt  3color-YGC.txt  5_ramps.txt  6_shades.txt  BOP blue.txt  BOP orange.txt  BOP purple.txt  Blue.txt  Circus Cherry.txt  Circus Cyan.txt  Circus Green.txt  Circus Ink Cherry.txt  Circus Ink Cyan.txt  Circus Ink Green.txt  Circus Ink Mint.txt  Circus Ink Purple.txt  Circus Ink Yellow.txt  Circus Mint.txt  Circus Purple.txt  Circus Yellow.txt  Cyan Hot.txt  Cyan.txt  Duo Cherry.txt  Duo Cyan.txt  Duo Green.txt  Duo Intense Cherry.txt  Duo Intense Cyan.txt  Duo Intense Green.txt  Duo Intense Mint.txt  Duo Intense Purple.txt  Duo Intense Yellow.txt  Duo Mint.txt  Duo Purple.txt  Duo Yellow.txt  Fire.txt  Grays g=0.25 inverted.txt  (+116 more)
assets/jdm_luts/: Circus Cherry.lut  Circus Cyan.lut  Circus Green.lut  Circus Ink Cherry.lut  Circus Ink Cyan.lut  Circus Ink Green.lut  Circus Ink Mint.lut  Circus Ink Purple.lut  Circus Ink Yellow.lut  Circus Mint.lut  Circus Purple.lut  Circus Yellow.lut  Duo Cherry.lut  Duo Cyan.lut  Duo Green.lut  Duo Intense Cherry.lut  Duo Intense Cyan.lut  Duo Intense Green.lut  Duo Intense Mint.lut  Duo Intense Purple.lut  Duo Intense Yellow.lut  Duo Mint.lut  Duo Purple.lut  Duo Yellow.lut  Grays g=0.25 inverted.lut  Grays g=0.50 inverted.lut  Grays g=0.75 inverted.lut  Grays g=1.25 inverted.lut  Grays g=1.50 inverted.lut  Grays g=1.75 inverted.lut  Grays g=2.00 inverted.lut  Ink Black.lut  Ink Cherry.lut  Ink Cyan.lut  Ink Green.lut  Ink Mint.lut  Ink Purple.lut  Ink Wash Black.lut  Ink Wash Cherry.lut  Ink Wash Cyan.lut  (+42 more)
assets/luts/: 16_colors.txt  5_ramps.txt  6_shades.txt  Cyan Hot.txt  Green Fire Blue.txt  HiLo.txt  ICA.txt  ICA2.txt  ICA3.txt  Magenta Hot.txt  OIMB1.txt  OIMB2.txt  OIMB3.txt  Orange Hot.txt  Rainbow RGB.txt  Red Hot.txt  Thermal.txt  Yellow Hot.txt  betterBlue.txt  betterCyan.txt  betterGreen.txt  betterOrange.txt  betterRed.txt  betterYellow.txt  blue_orange_icb.txt  brgbcmyw.txt  cool.txt  edges.txt  gem.txt  glasbey.txt  glasbey_inverted.txt  glasbey_on_dark.txt  glow.txt  mpl-inferno.txt  mpl-magma.txt  mpl-plasma.txt  mpl-viridis.txt  phase.txt  physics.txt  royal.txt  (+5 more)
pytests/: conftest.py  test_apply_colormap_parallel_u8.py  test_basics.py  test_bench_apply_colormap_parallel_u16.py  test_bench_blending.py  test_bench_external_colormaps.py  test_bench_mask_overlay.py  test_bench_merge_parallel_u16.py  test_bench_merge_parallel_u16_3d.py  test_bench_merge_parallel_u8.py  test_bench_merge_parallel_u8_3d.py  test_bench_py_threading.py  test_bench_py_vs_rayon_threads.py  test_bench_single_channel.py  test_bench_v1_vs_v2.py  test_bench_vs_numpy_colorize.py  test_bench_vs_numpy_merge.py  test_benchmarks.py  test_boundaries_only.py  test_colorize.py  test_create_mask_boundaries.py  test_free_threaded.py  test_mask_overlay.py  test_no_gil.py  test_parallel.py  test_py_314.py
python/mergechannels/: __init__.py  __init__.pyi  _blending.py  _internal.py  _luts.py  luts.py
scripts/: convert_luts_to_txt.ijm  populate_luts.py
src/: basic_extension.rs  basic_ndarray.rs  blend.rs  build.rs  cmaps.rs  colorize.rs  colorize_v2.rs  errors.rs  inputs.rs  interface.rs  lib.rs  process.rs
src/colorize/: cmaps.rs
