[package]
name = "mergechannels"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mergechannels"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
ndarray = "0.17.0"
numpy = "0.27.1"
pyo3 = "0.27.2"
smallvec = "1.15.1"
