[package]
name = "mergechannels"
version = "0.5.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mergechannels"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.16.1"
numpy = "0.27.1"
pyo3 = "0.27.2"
smallvec = "1.15.1"
