[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "mergechannels"
description = "Apply and merge colormaps"
readme = "README.md"
authors = [{ name = "Zac Swider", email = "zac.swider@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.9, <3.15"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: Matplotlib",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.25,<2.1; python_version == '3.9'",
    "numpy>=1.25,<2.3; python_version == '3.10'",
    "numpy>=1.25,<3; python_version == '3.11'",
    "numpy>=1.26,<3; python_version == '3.12'",
    "numpy>=2.0,<3; python_version == '3.13'",
    "numpy>=2.4,<3; python_version == '3.14'",
]

[project.optional-dependencies]
matplotlib = ["matplotlib>=3.5"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
include = [
    "python/mergechannels/*.py",
    "python/mergechannels/*.pyi",
    "python/mergechannels/py.typed",
]

[dependency-groups]
dev = [
    "cmap>=0.6.1",
    "jupytext>=1.18.1",
    "matplotlib>=3.7.5",
    "pandas-stubs>=2.2.2.240807",
    "pooch>=1.8.2",
    "pre-commit>=3.5.0",
    "pynvim>=0.5.2",
    "pytest-benchmark>=4.0.0",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
# Configure pytest-benchmark for cleaner output
addopts = "--benchmark-columns=min,max,mean,stddev,median,ops,outliers,rounds"
